# commercial_warehouse_system

./: .gitignore  Cargo.toml
.github/workflows/: rust-ci.yaml
api-gateway-service/: Cargo.toml
authentication-service/: Cargo.toml
authentication-service/src/: lib.rs
events-bus-service/: Cargo.toml
events-bus-service/src/: lib.rs  main.rs
fulfillment-service/: Cargo.toml
fulfillment-service/src/: lib.rs
logging-service/: Cargo.toml
logging-service/src/: lib.rs  log_event.rs  main.rs
notifications-service/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
