[workspace]
members = ["shared", "api-gateway-service", "authentication-service", "fulfillment-service", "logging-service", "notifications-service"]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
fluvio = "0.50.1"
futures = "0.3.31"