[package]
name = "events-bus-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crate Dependencies

# Workspace Dependencies
serde = { workspace = true}
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
fluvio = { workspace = true}
futures-util = { workspace = true}
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Internal Dependencies
logging-service = { path = "../logging-service" }