[package]
name = "logging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crate Dependencies
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# Workspace Dependencies
serde = { workspace = true}
serde_json = { workspace = true}
tokio = { workspace = true }
chrono = { workspace = true}
prometheus_exporter = { workspace = true}